restaurant service swagger update
