# app/services/restaurant/api/v1/communication/responses.go
@@ -1,5 +1,7 @@
 package communication
 
+// ReturnRestaurant contains information about the requested restaurant.
+// swagger:model
 type ReturnRestaurant struct {
 	ID              int
 	Name            string
@@ -10,15 +12,21 @@ type ReturnRestaurant struct {
 	Latitude        float64
 }
 
+// ReturnRestaurantList contains data about all the requested restaurants.
+// swagger:model
 type ReturnRestaurantList struct {
 	List []ReturnRestaurant
 }
 
+// ReturnMenu contains information about the menu from requested restaurant.
+// swagger:model
 type ReturnMenu struct {
 	RestaurantID int
 	MenuItems    []ReturnMenuItem
 }
 
+// ReturnMenuItem contains information about requested menu item.
+// swagger:model
 type ReturnMenuItem struct {
 	ID     int
 	Name   string
